Added simple footer

--- a/about.html
+++ b/about.html
@@ -276,10 +276,19 @@
     </div>
 </section>
 
+<section class="Feautes section">
+    <div class="row" style="margin-top: 40px">
+        <div class="col-12">
+            <div style="text-align: center">Copyright 2025, MedAdhere</div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Footer Area -->
+<!--
 <footer id="footer" class="footer ">
-    <!-- Footer Top -->
+    &lt;!&ndash; Footer Top &ndash;&gt;
     <div class="footer-top">
         <div class="container">
             <div class="row">
@@ -288,7 +297,7 @@
                         <h2>About Us</h2>
                         <p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore
                             dolore magna.</p>
-                        <!-- Social -->
+                        &lt;!&ndash; Social &ndash;&gt;
                         <ul class="social">
                             <li><a href="#"><i class="icofont-facebook"></i></a></li>
                             <li><a href="#"><i class="icofont-google-plus"></i></a></li>
@@ -296,10 +305,10 @@
                             <li><a href="#"><i class="icofont-vimeo"></i></a></li>
                             <li><a href="#"><i class="icofont-pinterest"></i></a></li>
                         </ul>
-                        <!-- End Social -->
+                        &lt;!&ndash; End Social &ndash;&gt;
                     </div>
                 </div>
-                <!--
+                &lt;!&ndash;
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="single-footer f-link">
                                                 <h2>Quick Links</h2>
@@ -325,8 +334,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                -->
-                <!--
+                &ndash;&gt;
+                &lt;!&ndash;
                                         <div class="col-lg-4 col-md-6 col-12">
                                             <div class="single-footer">
                                                 <h2>Open Hours</h2>
@@ -338,8 +347,8 @@
                                                 </ul>
                                             </div>
                                         </div>
-                -->
-                <!-- <div class="col-lg-3 col-md-6 col-12">
+                &ndash;&gt;
+                &lt;!&ndash; <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
                         <h2>Newsletter</h2>
                         <p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
@@ -349,16 +358,17 @@
                             <button class="button"><i class="icofont icofont-paper-plane"></i></button>
                         </form>
                     </div>
-                </div> -->
+                </div> &ndash;&gt;
             </div>
             >
         </div>
     </div>
-    <!--/ End Footer Top -->
-    <!-- Copyright -->
+    &lt;!&ndash;/ End Footer Top &ndash;&gt;
+    &lt;!&ndash; Copyright &ndash;&gt;
 
-    <!--/ End Copyright -->
+    &lt;!&ndash;/ End Copyright &ndash;&gt;
 </footer>
+-->
 <!--/ End Footer Area -->
 
 <!-- jquery Min JS -->
