--- a/index.html
+++ b/index.html
@@ -856,18 +856,28 @@
 			</div>
 		</section> -->
 		<!-- /End Newsletter Area -->
-		
+
+		<section class="Feautes section">
+			<div class="row">
+				<div class="col-12">
+					<div style="text-align: center">Copyright 2025, MedAdhere</div>
+				</div>
+			</div>
+		</section>
+
 		<!-- Footer Area -->
+<!--
 		<footer id="footer" class="footer ">
-			<!-- Footer Top -->
+			&lt;!&ndash; Footer Top &ndash;&gt;
 			<div class="footer-top">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-12">
 							<div class="single-footer">
-								<h2>About Us</h2>
-								<p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
-								<!-- Social -->
+&lt;!&ndash;								<h2>About Us</h2>&ndash;&gt;
+&lt;!&ndash;								<p>Copyright 2025 MedAdhere</p>&ndash;&gt;
+								&lt;!&ndash; Social &ndash;&gt;
+&lt;!&ndash;
 								<ul class="social">
 									<li><a href="#"><i class="icofont-facebook"></i></a></li>
 									<li><a href="#"><i class="icofont-google-plus"></i></a></li>
@@ -875,10 +885,11 @@
 									<li><a href="#"><i class="icofont-vimeo"></i></a></li>
 									<li><a href="#"><i class="icofont-pinterest"></i></a></li>
 								</ul>
-								<!-- End Social -->
+&ndash;&gt;
+								&lt;!&ndash; End Social &ndash;&gt;
 							</div>
 						</div>
-<!--
+&lt;!&ndash;
 						<div class="col-lg-6 col-md-6 col-12">
 							<div class="single-footer f-link">
 								<h2>Quick Links</h2>
@@ -904,8 +915,8 @@
 								</div>
 							</div>
 						</div>
--->
-<!--
+&ndash;&gt;
+&lt;!&ndash;
 						<div class="col-lg-4 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>Open Hours</h2>
@@ -917,8 +928,8 @@
 								</ul>
 							</div>
 						</div>
--->
-						<!-- <div class="col-lg-3 col-md-6 col-12">
+&ndash;&gt;
+						&lt;!&ndash; <div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>Newsletter</h2>
 								<p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
@@ -928,15 +939,16 @@
 									<button class="button"><i class="icofont icofont-paper-plane"></i></button>
 								</form>
 							</div>
-						</div> -->
+						</div> &ndash;&gt;
 					</div>
 				</div>
 			</div>
-			<!--/ End Footer Top -->
-			<!-- Copyright -->
+			&lt;!&ndash;/ End Footer Top &ndash;&gt;
+			&lt;!&ndash; Copyright &ndash;&gt;
 		
-			<!--/ End Copyright -->
+			&lt;!&ndash;/ End Copyright &ndash;&gt;
 		</footer>
+-->
 		<!--/ End Footer Area -->
 		
 		<!-- jquery Min JS -->
