--- a/product.html
+++ b/product.html
@@ -378,10 +378,19 @@
     </div>
 </section>
 
+<section class="Feautes section">
+    <div class="row" style="margin-top: 40px">
+        <div class="col-12">
+            <div style="text-align: center">Copyright 2025, MedAdhere</div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Footer Area -->
+<!--
 <footer id="footer" class="footer ">
-    <!-- Footer Top -->
+    &lt;!&ndash; Footer Top &ndash;&gt;
     <div class="footer-top">
         <div class="container">
             <div class="row">
@@ -390,7 +399,7 @@
                         <h2>About Us</h2>
                         <p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore
                             dolore magna.</p>
-                        <!-- Social -->
+                        &lt;!&ndash; Social &ndash;&gt;
                         <ul class="social">
                             <li><a href="#"><i class="icofont-facebook"></i></a></li>
                             <li><a href="#"><i class="icofont-google-plus"></i></a></li>
@@ -398,10 +407,10 @@
                             <li><a href="#"><i class="icofont-vimeo"></i></a></li>
                             <li><a href="#"><i class="icofont-pinterest"></i></a></li>
                         </ul>
-                        <!-- End Social -->
+                        &lt;!&ndash; End Social &ndash;&gt;
                     </div>
                 </div>
-                <!--
+                &lt;!&ndash;
                                         <div class="col-lg-4 col-md-6 col-12">
                                             <div class="single-footer f-link">
                                                 <h2>Quick Links</h2>
@@ -427,19 +436,19 @@
                                                 </div>
                                             </div>
                                         </div>
-                -->
-                <!--						<div class="col-lg-4 col-md-6 col-12">-->
-                <!--							<div class="single-footer">-->
-                <!--								<h2>Open Hours</h2>-->
-                <!--								<p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>-->
-                <!--								<ul class="time-sidual">-->
-                <!--									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>-->
-                <!--									<li class="day">Saturday <span>9.00-18.30</span></li>-->
-                <!--									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>-->
-                <!--								</ul>-->
-                <!--							</div>-->
-                <!--						</div>-->
-                <!-- <div class="col-lg-3 col-md-6 col-12">
+                &ndash;&gt;
+                &lt;!&ndash;						<div class="col-lg-4 col-md-6 col-12">&ndash;&gt;
+                &lt;!&ndash;							<div class="single-footer">&ndash;&gt;
+                &lt;!&ndash;								<h2>Open Hours</h2>&ndash;&gt;
+                &lt;!&ndash;								<p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>&ndash;&gt;
+                &lt;!&ndash;								<ul class="time-sidual">&ndash;&gt;
+                &lt;!&ndash;									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>&ndash;&gt;
+                &lt;!&ndash;									<li class="day">Saturday <span>9.00-18.30</span></li>&ndash;&gt;
+                &lt;!&ndash;									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>&ndash;&gt;
+                &lt;!&ndash;								</ul>&ndash;&gt;
+                &lt;!&ndash;							</div>&ndash;&gt;
+                &lt;!&ndash;						</div>&ndash;&gt;
+                &lt;!&ndash; <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
                         <h2>Newsletter</h2>
                         <p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
@@ -449,15 +458,16 @@
                             <button class="button"><i class="icofont icofont-paper-plane"></i></button>
                         </form>
                     </div>
-                </div> -->
+                </div> &ndash;&gt;
             </div>
         </div>
     </div>
-    <!--/ End Footer Top -->
-    <!-- Copyright -->
+    &lt;!&ndash;/ End Footer Top &ndash;&gt;
+    &lt;!&ndash; Copyright &ndash;&gt;
 
-    <!--/ End Copyright -->
+    &lt;!&ndash;/ End Copyright &ndash;&gt;
 </footer>
+-->
 <!--/ End Footer Area -->
 
 <!-- jquery Min JS -->
